<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ExpenseManager</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_send">Send</string>
    <string name="edit_message">Enter the Amount</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="add">Add Transaction</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="budget">Budget</string>
    <string name="summary">Summary</string>
    <string name="pending">Pending</string>
    <string name="history">History</string>

    <color name="red">#AA0114</color>
    <color name="green">#CCFF</color>

    <string name="price">Price:</string>
    <string name="category">Category:</string>
    <string name="description">Description</string>
    <string name="date">Date:</string>
    <string name="price_message">Enter price here..</string>

    <string-array name="categories">
        <item>Food</item>
        <item>Bill Payment</item>
        <item>Travel</item>
        <item>Personal Care</item>
    </string-array>

    <string name="pick_date">Pick Date</string>
    <string name="save">Save</string>

    <color name="darkgray">#808080</color>
    <color name="lightblue">#6495ED</color>

    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_pending">PendingActivity</string>
    <string name="all">All</string>
    <string name="go">Go</string>

    <color name="lightGrey">#ECECEC</color>
    <color name="white">#FFFFFF</color>

    <string name="date_message">dd-mm-yyyy</string>
    <string name="title_activity_income">IncomeActivity</string>
    <string-array name="categories1">
        <item >All</item>
        <item >Food</item>
        <item>Bill Payment</item><item >Travel</item>
        <item >Personal Care</item>
        
    </string-array>

</resources>
