<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@color/lightGrey" >

    <Button
        android:id="@+id/button1"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
  
        android:text="@string/add"
        android:background="@color/darkgray"
        
         />
    
  	<Button
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:text="@string/history" 
        android:layout_gravity="center"
        android:id="@+id/button2"
        
      />
    
	<Button
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:text="@string/pending" 
        android:layout_gravity="center"
        android:id="@+id/button3"
      />
	
</LinearLayout>
